# AU-SprayerSystem

./: README.md  config.py  marcoStrategy.py  nozzleActivation.py  testPyGame.py  unitTest.py
orei_cam-ws/src/sprayer_system/: package.xml  setup.cfg  setup.py  sprayer_system_node_codebase.txt
orei_cam-ws/src/sprayer_system/config/: nozzle_calibration.yaml  pruned_nozzle_calibration.yaml  pruned_nozzle_calibration_small.yaml  sprayer_config.yaml
orei_cam-ws/src/sprayer_system/launch/: sprayer_system.launch.py
orei_cam-ws/src/sprayer_system/nozzle_pruner/: prune_nozzle_calibration.py
orei_cam-ws/src/sprayer_system/sprayer_system/: sprayer_node.py
orei_cam-ws/src/sprayer_system/sprayer_system/common/: __init__.py  definitions.py  geometry.py
orei_cam-ws/src/sprayer_system/sprayer_system/hardware_interface/: __init__.py  base_interface.py  factory.py  serial_relay_driver.py
orei_cam-ws/src/sprayer_system/sprayer_system/motion/: __init__.py  motion_model.py
orei_cam-ws/src/sprayer_system/sprayer_system/object_management/: __init__.py  object_manager.py
orei_cam-ws/src/sprayer_system/sprayer_system/planning/: __init__.py  nozzle_configuration.py  nozzle_mapper.py  spray_scheduler.py
orei_cam-ws/src/sprayer_system/sprayer_system/strategy/: TEMPLATE_FOR_NEW_STRATEGY.py  __init__.py  base_strategy.py  factory.py  macro_strategy.py  no_spray_strategy.py  simple_weed_strategy.py  spray_all_strategy.py
orei_cam-ws/src/sprayer_system/sprayer_system/visualization/: __init__.py  debug_gui.py
orei_cam-ws/src/vision_system/: package.xml  setup.cfg  setup.py
orei_cam-ws/src/vision_system/config/: vision_system_config.yaml
orei_cam-ws/src/vision_system/launch/: vision_system.launch.py
orei_cam-ws/src/vision_system/vision_system/: vision_node.py
orei_cam-ws/src/vision_system/vision_system/common/: definitions.py
orei_cam-ws/src/vision_system/vision_system/inference/: inference_engine.py
orei_cam-ws/src/vision_system/vision_system/matching/: psez_crop_matcher.py
prototyping/: USE_ME.py
(+71 files in other folders)
