<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sprayer_system</name>
  <version>0.1.0</version>
  <description>ROS 2 node for controlling precision spraying based on vision system input.</description>
  <maintainer email="msn@agro.au.dk">Michael Noerbo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend> 
  <depend>vision_interfaces</depend> 
  <depend>gps_msgs</depend>      

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>