<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_system</name>
  <version>0.1.0</version>
  <description>Real-time YOLOv11 object detection and tracking ROS2 node for precision spraying.</description>
  <maintainer email="msn@agro.au.dk">Michael Noerbo</maintainer> 
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>std_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>orei_cam_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>vision_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>